Remove extra pages and code
Add file size limit to backend (5mb)

--- a/backend/supervisord.conf
+++ b/backend/supervisord.conf
@@ -2,7 +2,8 @@
 nodaemon=true
 
 [program:django]
-command=sh -c "python manage.py flush --noinput && python manage.py makemigrations && python manage.py migrate && python manage.py runserver 0.0.0.0:8000"
+environment = PYTHONUNBUFFERED=1
+command=sh -c "python -u manage.py flush --noinput && python manage.py makemigrations && python manage.py migrate && python manage.py runserver 0.0.0.0:8000"
 autorestart=true
 stdout_logfile=/dev/stdout
 stderr_logfile=/dev/stderr
