Add build to prod

--- a/docker-compose-prod.yml
+++ b/docker-compose-prod.yml
@@ -3,6 +3,8 @@ services:
     build:
       context: ./frontend
     command: sh -c "npm install && npm run build"
+    volumes:
+      - ./frontend:/app
 
   redis:
     volumes:
