Add postgres to backend
Improve dev/production docker compose settings to use env files

--- a/docker-compose-dev.yml
+++ b/docker-compose-dev.yml
@@ -4,3 +4,6 @@ services:
       - ./frontend:/app
       - /app/node_modules
     command: sh -c "npm install && npm run dev -- --host"
+  backend:
+    env_file:
+      - ./.env.dev
