--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -18,3 +18,10 @@ services:
     command: sh -c "redis-server"
     ports:
       - "6379:6379"
+  
+  db:
+    image: postgres:15
+    environment:
+      - POSTGRES_USER=postgres
+      - POSTGRES_PASSWORD=postgres
+      - POSTGRES_DB=netdis
