--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -23,4 +23,5 @@ sqlparse==0.5.1
 tzdata==2024.1
 vine==5.1.0
 wcwidth==0.2.13
+psycopg2-binary==2.9.9
 # export OBJC_DISABLE_INITIALIZE_FORK_SAFETY=YES
