--- a/frontend/Dockerfile.prod
+++ b/frontend/Dockerfile.prod
@@ -3,7 +3,7 @@ FROM node:20-alpine
 WORKDIR /app
 # ENV VITE_BACKEND=http://localhost:8000/
 COPY . .
-COPY entrypoint.dev.sh /entrypoint.sh
+COPY entrypoint.prod.sh /entrypoint.sh
 RUN chmod +x /entrypoint.sh
 
 ENTRYPOINT ["/entrypoint.sh"]
