Add automatic file deletion
Add celery beat periodic task. In the future, this will be used
for periodic file eviction, if needed. Auto file deletion based on
total size may make this not needed, depending on the file turnover,
i.e. if enough files are uploaded within a 2 day period to not
warrant deleting periodically. This remains to be seen. I'll
implement this in the future, and will be used if needed.

--- a/backend/devsupervisord.conf
+++ b/backend/devsupervisord.conf
@@ -3,7 +3,7 @@ nodaemon=true
 
 [program:django]
 environment = PYTHONUNBUFFERED=1
-command=sh -c "python -u manage.py flush --noinput && python manage.py makemigrations && python manage.py migrate && python manage.py runserver 0.0.0.0:8000"
+command=sh -c "python manage.py flush --noinput && python manage.py makemigrations && python manage.py migrate && python manage.py runserver 0.0.0.0:8000"
 autorestart=true
 stdout_logfile=/dev/stdout
 stderr_logfile=/dev/stderr
@@ -12,6 +12,15 @@ stderr_logfile_maxbytes = 0
 
 [program:celery]
 command=celery -A netdis worker -l info
+autorestart=true
+stdout_logfile=/dev/stdout
+stderr_logfile=/dev/stderr
+stdout_logfile_maxbytes = 0
+stderr_logfile_maxbytes = 0
+
+[program:celery_beat]
+# command=celery -A netdis worker --beat -l info
+command=celery -A netdis beat -l INFO 
 autorestart=true
 stdout_logfile=/dev/stdout
 stderr_logfile=/dev/stderr
