--- a/backend/prodsupervisord.conf
+++ b/backend/prodsupervisord.conf
@@ -3,7 +3,7 @@ nodaemon=true
 
 [program:django]
 environment = PYTHONUNBUFFERED=1
-command=sh -c "python -u manage.py flush --noinput && python manage.py makemigrations && python manage.py migrate && gunicorn -b 0.0.0.0:8000 netdis.wsgi"
+command=sh -c "python manage.py flush --noinput && python manage.py makemigrations && python manage.py migrate && gunicorn -b 0.0.0.0:8000 netdis.wsgi"
 autorestart=true
 stdout_logfile=/dev/stdout
 stderr_logfile=/dev/stderr
