--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -8,12 +8,15 @@ click-plugins==1.1.1
 click-repl==0.3.0
 Django==5.0.7
 django-cors-headers==4.4.0
+django-crontab==0.7.1
 djangorestframework==3.15.2
 djangorestframework-simplejwt==5.3.1
+gunicorn==23.0.0
 JPype1==1.5.0
 kombu==5.3.7
 packaging==24.1
 prompt_toolkit==3.0.47
+psycopg2-binary==2.9.9
 pyhidra==1.2.0
 PyJWT==2.8.0
 python-dateutil==2.9.0.post0
@@ -23,5 +26,3 @@ sqlparse==0.5.1
 tzdata==2024.1
 vine==5.1.0
 wcwidth==0.2.13
-psycopg2-binary==2.9.9
-# export OBJC_DISABLE_INITIALIZE_FORK_SAFETY=YES
