Fix concurrent bug
Technically this isn't a concurrency error, but was rather revealed
through concurrency testing. Non-existing file upload was returning
the file ID rather than the project id, which wouldn't fail on simple
dev testing as the project and file id are assumed to both be 1.

--- a/backend/devsupervisord.conf
+++ b/backend/devsupervisord.conf
@@ -11,7 +11,7 @@ stdout_logfile_maxbytes = 0
 stderr_logfile_maxbytes = 0
 
 [program:celery]
-command=celery -A netdis worker -l info
+command=celery -A netdis worker -l info --concurrency=2
 autorestart=true
 stdout_logfile=/dev/stdout
 stderr_logfile=/dev/stderr
@@ -19,7 +19,6 @@ stdout_logfile_maxbytes = 0
 stderr_logfile_maxbytes = 0
 
 [program:celery_beat]
-# command=celery -A netdis worker --beat -l info
 command=celery -A netdis beat -l INFO 
 autorestart=true
 stdout_logfile=/dev/stdout
