--- a/backend/prodsupervisord.conf
+++ b/backend/prodsupervisord.conf
@@ -17,3 +17,11 @@ stdout_logfile=/dev/stdout
 stderr_logfile=/dev/stderr
 stdout_logfile_maxbytes = 0
 stderr_logfile_maxbytes = 0
+
+[program:celery_beat]
+command=celery -A netdis beat -l INFO 
+autorestart=true
+stdout_logfile=/dev/stdout
+stderr_logfile=/dev/stderr
+stdout_logfile_maxbytes = 0
+stderr_logfile_maxbytes = 0
