--- a/docker-compose-prod.yml
+++ b/docker-compose-prod.yml
@@ -12,6 +12,8 @@ services:
       dockerfile: Dockerfile.prod
     env_file:
       - ./.env.prod
+    expose:
+      - "8000"
 
   redis:
     volumes:
@@ -22,6 +24,7 @@ services:
     ports: 
       - "80:80"
     volumes:
+      - ./nginxprod.conf:/etc/nginx/conf.d/default.conf
       - ./frontend/dist:/usr/share/nginx/html:ro
     networks:
       - ng
