--- a/nginxprod.conf
+++ b/nginxprod.conf
@@ -1,6 +1,6 @@
 server {
     listen 80;
-    server_name localhost;
+    server_name netdis.org;
 
     location / {
         root /usr/share/nginx/html;
@@ -8,10 +8,14 @@ server {
     }
 
     location /api/ {
-        proxy_pass http://127.0.0.1:8000;
+        proxy_pass http://backend:8000;
         proxy_set_header Host $host;
         proxy_set_header X-Real-IP $remote_addr;
         proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
         proxy_set_header X-Forwarded-Proto $scheme;
+
+        # add_header Access-Control-Allow-Origin *;
+        # add_header Access-Control-Allow-Methods 'GET, POST, OPTIONS';
+        # add_header Access-Control-Allow-Headers 'Origin, Content-Type, X-Auth-Token, Authorization';
     }
 }
