Add host name to production files

--- a/.env.prod
+++ b/.env.prod
@@ -1,7 +1,7 @@
 DEBUG=0
 SECRET_KEY=foo
-DJANGO_ALLOWED_HOSTS=localhost 127.0.0.1 [::1]
-CORS_ALLOWED_ORIGINS=http://localhost
+DJANGO_ALLOWED_HOSTS=https://www.netdis.org https://netdis.org netdis.org
+CORS_ALLOWED_ORIGINS=https://www.netdis.org https://netdis.org netdis.org
 
 SQL_ENGINE=django.db.backends.postgresql
 SQL_DATABASE=netdis
