Add rate limiting to nginx

--- a/nginxprod.conf
+++ b/nginxprod.conf
@@ -1,3 +1,5 @@
+limit_req_zone $binary_remote_addr zone=mylimit:10m rate=20r/s;
+
 server {
     listen 80;
     server_name netdis.org;
@@ -8,6 +10,8 @@ server {
     }
 
     location /api/ {
+        limit_req zone=mylimit burst=300;
+
         proxy_pass http://backend:8000;
         proxy_set_header Host $host;
         proxy_set_header X-Real-IP $remote_addr;
