Update config to include www domain

--- a/nginxprod.conf
+++ b/nginxprod.conf
@@ -2,7 +2,7 @@ limit_req_zone $binary_remote_addr zone=mylimit:10m rate=20r/s;
 
 server {
     listen 80;
-    server_name netdis.org;
+    server_name www.netdis.org netdis.org;
 
     location / {
         root /usr/share/nginx/html;
