Add WWW redirect

--- a/nginxprod.conf
+++ b/nginxprod.conf
@@ -2,7 +2,13 @@ limit_req_zone $binary_remote_addr zone=mylimit:10m rate=20r/s;
 
 server {
     listen 80;
-    server_name www.netdis.org netdis.org;
+    server_name www.netdis.org;
+    return 301 http://netdis.org$request_uri;
+}
+
+server {
+    listen 80;
+    server_name netdis.org;
 
     location / {
         root /usr/share/nginx/html;
