--- a/nginxprod.conf
+++ b/nginxprod.conf
@@ -9,6 +9,7 @@ server {
 server {
     listen 80;
     server_name netdis.org;
+    client_max_body_size 5M;
 
     location / {
         root /usr/share/nginx/html;
