--- a/backend/prodsupervisord.conf
+++ b/backend/prodsupervisord.conf
@@ -11,7 +11,7 @@ stdout_logfile_maxbytes = 0
 stderr_logfile_maxbytes = 0
 
 [program:celery]
-command=celery -A netdis worker -l info
+command=celery -A netdis worker -l info --concurrency=3
 autorestart=true
 stdout_logfile=/dev/stdout
 stderr_logfile=/dev/stderr
